<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/bg_gray"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialogError_TextView_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/delete_account_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogError_TextView_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_regular"
        android:text="@string/select_title"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/dialogError_TextView_title"
        app:layout_constraintStart_toStartOf="@+id/dialogError_TextView_title"
        app:layout_constraintTop_toBottomOf="@+id/dialogError_TextView_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogCustom_Button_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorGreen"
        android:fontFamily="@font/sen_regular"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialogCustom_Button_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogCustom_Button_confirm"
        app:layout_constraintTop_toTopOf="@+id/dialogCustom_Button_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogCustom_Button_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorRed"
        android:fontFamily="@font/sen_regular"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogCustom_Button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogError_TextView_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>

