<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginActivity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginActivity_guideline">

        <EditText
            android:id="@+id/activityLogin_editText_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="30dp"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loginActivity_materialButton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/activityLogin_editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_padlock"
            android:drawablePadding="30dp"
            android:fontFamily="@font/sen_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginActivity_materialButton_login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorGreen"
        android:fontFamily="@font/sen_regular"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/loginActivity_materialButton_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
        android:id="@+id/loginActivity_dilatingDotsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:color="@color/colorGreen"
        android:radius="3.5sp"
        app:dd_animationDuration="500"
        app:dd_horizontalSpacing="10dp"
        app:dd_numDots="3"
        app:dd_scaleMultiplier="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/loginActivity_materialButton_login"
        app:layout_constraintEnd_toEndOf="@+id/loginActivity_materialButton_login"
        app:layout_constraintStart_toStartOf="@+id/loginActivity_materialButton_login"
        app:layout_constraintTop_toTopOf="@+id/loginActivity_materialButton_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginActivity_materialButton_signUp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:fontFamily="@font/sen_regular"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivity_materialButton_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>